--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Danjka\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "c:\\users\\mrdan\\appdata\\local\\programs\\python\\python39\\python.exe"
 }
